# pytorch-lantern

./: .flake8  .gitignore  .readthedocs.yml  LICENSE  README.rst  pyproject.toml  pytest.ini
.github/workflows/: publish.yml  test.yml
docs/source/: conf.py  index.rst  lantern.functional.rst  lantern.numpy.rst  lantern.rst  requirements.txt  workflow.functional.rst  workflow.ignite.decorators.rst  workflow.ignite.handlers.learning_rate.rst  workflow.ignite.handlers.rst  workflow.ignite.metrics.rst  workflow.ignite.rst  workflow.rst  workflow.torch.rst
lantern/: __init__.py  early_stopping.py  epochs.py  evaluate.py  functional_base.py  git_info.py  lambda_module.py  metric.py  metric_table.py  metrics.py  module_compose.py  module_device.py  module_train.py  numpy.py  numpy_from_matplotlib_figure.py  numpy_seed.py  progress_bar.py  requires_grad.py  set_learning_rate.py  set_seeds.py  step.py  tensor.py  to_device.py  to_shapes.py  train.py  update_cpu_model.py  worker_init.py  worker_init_fn.py
lantern/functional/: __init__.py  star.py  starcompose.py  structure_map.py
lantern/numpy/: __init__.py  figure_to_numpy.py
test/: test_mnist.py
wildfire/: __init__.py  early_stopping.py  epochs.py  evaluate.py  metrics.py  module_compose.py  progress_bar.py  to_device.py  train.py  worker_init.py
wildfire/functional/: __init__.py
wildfire/torch/: __init__.py  evaluate.py  module_compose.py  train.py  worker_init.py
wildfire/torch/decorators/: evaluate.py  to_device.py  train.py
