[tool.poetry]
name = "lantern"
version = "0.0.0"
description = "Pytorch project template and related tools"
authors = ["Aiwizo"]
license = "Apache 2"

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.19.4"
opencv-python = "^4.4.0"
pytorch-datastream = "^0.3.8"
torch = "^1.6.0"
tqdm = "^4.51.0"
tensorboard = "^2.2.0"
imgaug = "^0.4.0"

[tool.poetry.dev-dependencies]
cookiecutter = "^1.7.2"
flake8 = "^3.8.4"
pytest = "^6.1.2"
rstcheck = "^3.3.1"
Sphinx = "^3.3.0"
torchvision = "^0.7"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
