[tool.poetry]
name = "pytorch-lantern"
version = "0.0.0"
description = "Pytorch project template and related tools"
authors = ["NextML AB"]
license = "Apache-2.0"
readme = "README.rst"
repository = "https://github.com/nextml-code/pytorch-lantern"
documentation = "https://pytorch-lantern.readthedocs.io"
keywords = [
    "pytorch",
    "machine",
    "learning"
]
# some classifiers are added automatically, see https://python-poetry.org/docs/pyproject/#classifiers
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Other Environment",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
packages = [
    { include = "lantern" },
]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.19.4"
torch = "^1.6.0"
tqdm = "*"
tensorboard = { version = "^2.2.0", optional = true }

[tool.poetry.extras]
training = ["tensorboard"]

[tool.poetry.group.dev.dependencies]
cookiecutter = "^1.7.2"
flake8 = "^3.8.4"
pytest = "^6.1.2"
rstcheck = "^3.3.1"
Sphinx = "^3.3.0"
black = "^22.8.0"
torchvision = "0.*"
pytorch-datastream = "^0.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''
